[tool.poetry]

name = "app"
version = "0.0.1"
description = ""
authors = ["William Bonvini"]
readme = "README.md"

[tool.poetry.dependencies]

python = ">=3.9.5, <3.12"

plotly = "^5.13"
dash = "^2.8"
gunicorn = "^20.1.0"
pandas = "^1.5.3"
sydraw = "^0.0.3"


[tool.poetry.scripts]
demo = 'app:run_demo'


